// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Logic Components | MainPanel.Graph Graph 1`] = `
<div
  className="graphstyle__GraphWrapper-q2z1zw-0 isiZCT graphWrapper"
>
  <div
    className="graphstyle__GraphHeaderContainer-q2z1zw-5 hFeNAF"
  >
    <h2
      className="graphstyle__GraphHeader-q2z1zw-6 kjuTQW"
    >
      ID: 1
    </h2>
  </div>
  <div
    className="graphstyle__GraphNavigationWrapper-q2z1zw-7 dutfNv"
  >
    <button
      className="graphstyle__GraphToogleViewButton-q2z1zw-8 DFyaF"
      onClick={[Function]}
    >
      GRAPH VIEW
    </button>
    <button
      className="graphstyle__GraphToogleViewButton-q2z1zw-8 hhYZip"
      onClick={[Function]}
    >
      PERFORMANCE VIEW
    </button>
  </div>
  <div
    className="graphstyle__GraphContent-q2z1zw-1 bJUIFF"
  >
    <div
      className="graphstyle__GraphContainer-q2z1zw-2 dgEvnT"
    >
      <div
        className="graphstyle__NodesGraph-q2z1zw-3 hKRniD"
      />
      <button
        className="graphstyle__LegendIcon-q2z1zw-9 fTGDQd"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-info-circle fa-w-16 "
          data-icon="info-circle"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </button>
    </div>
    <div
      className="graphstyle__PerformanceTimeLineContainer-q2z1zw-4 dSdhZP"
    >
      <div
        className="timelinestyle__Timeline-sc-1d4j339-0 hFKUmK"
        tabIndex="0"
      />
    </div>
  </div>
  <div
    className="graphstyle__GraphAdditionalPanel-q2z1zw-10 gDFTgL"
  >
    <div
      className="graphstyle__GraphAdditionalPanelCloseButton-q2z1zw-13 bLREHf"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-11 "
        data-icon="times"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 352 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="graphstyle__GraphAdditionalPanelHeader-q2z1zw-11 ecHOvv"
    >
      <h2>
        <span>
          Node info
        </span>
      </h2>
    </div>
    <div
      className="graphstyle__GraphAdditionalPanelContent-q2z1zw-12 heAnFu"
    >
      <div
        className="nodeInfostyled__NodeInfoContainer-jone1x-0 hoRVhZ"
        display="true"
        id="raw-container"
      >
        <div
          className="rawstyled__RawContainer-spwng0-0 fAARLc"
        />
      </div>
      <div
        className="nodeInfostyled__NodeInfoOptionsBar-jone1x-1 bWMUdw"
      >
        <button
          className="nodeInfostyled__NodeInfoOption-jone1x-2 cGSFpH"
          onClick={[Function]}
          type="button"
        >
          RAW
        </button>
      </div>
    </div>
  </div>
  <div
    className="graphstyle__GraphAdditionalPanel-q2z1zw-10 gDFTgL"
  >
    <div
      className="graphstyle__GraphAdditionalPanelCloseButton-q2z1zw-13 bLREHf"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-11 "
        data-icon="times"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 352 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="graphstyle__GraphAdditionalPanelHeader-q2z1zw-11 ecHOvv"
    >
      <h2>
        Legend
      </h2>
    </div>
    <div
      className="graphstyle__GraphAdditionalPanelContent-q2z1zw-12 heAnFu"
    >
      <div
        className="legendstyle__LegendContainer-sc-2p0nok-0 fZEAVz"
        id="legend"
      >
        <div
          className="legendstyle__LegendSectionContainer-sc-2p0nok-2 iWpYhi"
        >
          <h3
            className="legendstyle__LegendHeader-sc-2p0nok-1 dpKlJj"
          >
            Nodes
          </h3>
          <div
            className="legendstyle__LegendItem-sc-2p0nok-3 juSFsD"
          >
            <div
              className="legendstyle__LegendItemIcon-sc-2p0nok-4 llofHW"
            >
              <div
                className="legendstyle__SquareIcon-sc-2p0nok-5 gchDRt"
                color="#FAC05E"
              />
            </div>
            <span
              className="legendstyle__LegendItemDescription-sc-2p0nok-9 iIELWJ"
            >
              missing
            </span>
          </div>
          <div
            className="legendstyle__LegendItem-sc-2p0nok-3 juSFsD"
          >
            <div
              className="legendstyle__LegendItemIcon-sc-2p0nok-4 llofHW"
            >
              <div
                className="legendstyle__SquareIcon-sc-2p0nok-5 gEtnnO"
                color="#707070"
              />
            </div>
            <span
              className="legendstyle__LegendItemDescription-sc-2p0nok-9 iIELWJ"
            >
              unprocessed
            </span>
          </div>
          <div
            className="legendstyle__LegendItem-sc-2p0nok-3 juSFsD"
          >
            <div
              className="legendstyle__LegendItemIcon-sc-2p0nok-4 llofHW"
            >
              <div
                className="legendstyle__SquareIcon-sc-2p0nok-5 dTRxXv"
                color="#59CD90"
              />
            </div>
            <span
              className="legendstyle__LegendItemDescription-sc-2p0nok-9 iIELWJ"
            >
              success
            </span>
          </div>
          <div
            className="legendstyle__LegendItem-sc-2p0nok-3 juSFsD"
          >
            <div
              className="legendstyle__LegendItemIcon-sc-2p0nok-4 llofHW"
            >
              <div
                className="legendstyle__SquareIcon-sc-2p0nok-5 dqLDO"
                color="#DE3C4B"
              />
            </div>
            <span
              className="legendstyle__LegendItemDescription-sc-2p0nok-9 iIELWJ"
            >
              error
            </span>
          </div>
          <div
            className="legendstyle__LegendItem-sc-2p0nok-3 juSFsD"
          >
            <div
              className="legendstyle__LegendItemIcon-sc-2p0nok-4 llofHW"
            >
              <div
                className="legendstyle__SquareIcon-sc-2p0nok-5 kLExpo"
                color="#3FA7D6"
              />
            </div>
            <span
              className="legendstyle__LegendItemDescription-sc-2p0nok-9 iIELWJ"
            >
              other
            </span>
          </div>
        </div>
        <div
          className="legendstyle__LegendSectionContainer-sc-2p0nok-2 iWpYhi"
        >
          <h3
            className="legendstyle__LegendHeader-sc-2p0nok-1 dpKlJj"
          >
            Composites
          </h3>
          <div
            className="legendstyle__LegendItem-sc-2p0nok-3 juSFsD"
          >
            <div
              className="legendstyle__LegendItemIcon-sc-2p0nok-4 llofHW"
            >
              <div
                className="legendstyle__CircleIcon-sc-2p0nok-6 flkVtn"
                color="white"
              />
            </div>
            <span
              className="legendstyle__LegendItemDescription-sc-2p0nok-9 iIELWJ"
            >
              startNode
            </span>
          </div>
          <div
            className="legendstyle__LegendItem-sc-2p0nok-3 juSFsD"
          >
            <div
              className="legendstyle__LegendItemIcon-sc-2p0nok-4 llofHW"
            >
              <div
                className="legendstyle__CircleIcon-sc-2p0nok-6 bkFdDJ"
                color="multi"
              />
            </div>
            <span
              className="legendstyle__LegendItemDescription-sc-2p0nok-9 iIELWJ"
            >
              endNode
            </span>
          </div>
        </div>
        <div
          className="legendstyle__LegendSectionContainer-sc-2p0nok-2 iWpYhi"
        >
          <h3
            className="legendstyle__LegendHeader-sc-2p0nok-1 dpKlJj"
          >
            Labels
          </h3>
          <div
            className="legendstyle__LegendItem-sc-2p0nok-3 juSFsD"
          >
            <div
              className="legendstyle__LegendItemIcon-sc-2p0nok-4 llofHW"
            >
              <div
                className="legendstyle__RectangleIcon-sc-2p0nok-7 euDucZ"
                color="#59CD90"
              />
            </div>
            <span
              className="legendstyle__LegendItemDescription-sc-2p0nok-9 iIELWJ"
            >
              _success
            </span>
          </div>
          <div
            className="legendstyle__LegendItem-sc-2p0nok-3 juSFsD"
          >
            <div
              className="legendstyle__LegendItemIcon-sc-2p0nok-4 llofHW"
            >
              <div
                className="legendstyle__RectangleIcon-sc-2p0nok-7 eBmEFs"
                color="#DE3C4B"
              />
            </div>
            <span
              className="legendstyle__LegendItemDescription-sc-2p0nok-9 iIELWJ"
            >
              _error
            </span>
          </div>
          <div
            className="legendstyle__LegendItem-sc-2p0nok-3 juSFsD"
          >
            <div
              className="legendstyle__LegendItemIcon-sc-2p0nok-4 llofHW"
            >
              <div
                className="legendstyle__RectangleIcon-sc-2p0nok-7 cVoNTu"
                color="#3FA7D6"
              />
            </div>
            <span
              className="legendstyle__LegendItemDescription-sc-2p0nok-9 iIELWJ"
            >
              _[custom]
            </span>
          </div>
        </div>
        <div
          className="legendstyle__LegendSectionContainer-sc-2p0nok-2 iWpYhi"
        >
          <h3
            className="legendstyle__LegendHeader-sc-2p0nok-1 dpKlJj"
          >
            Edges
          </h3>
          <div
            className="legendstyle__LegendItem-sc-2p0nok-3 juSFsD"
          >
            <div
              className="legendstyle__LegendItemIcon-sc-2p0nok-4 llofHW"
            >
              <div
                className="legendstyle__LineIcon-sc-2p0nok-8 fKkxXT"
                color="black"
                shape="solid"
              />
            </div>
            <span
              className="legendstyle__LegendItemDescription-sc-2p0nok-9 iIELWJ"
            >
              processed
            </span>
          </div>
          <div
            className="legendstyle__LegendItem-sc-2p0nok-3 juSFsD"
          >
            <div
              className="legendstyle__LegendItemIcon-sc-2p0nok-4 llofHW"
            >
              <div
                className="legendstyle__LineIcon-sc-2p0nok-8 bHlUv"
                color="grey"
                shape="dashed"
              />
            </div>
            <span
              className="legendstyle__LegendItemDescription-sc-2p0nok-9 iIELWJ"
            >
              unprocessed
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Logic Components | MainPanel.Graph.Legend Legend 1`] = `
<div
  className="legendstyle__LegendContainer-sc-2p0nok-0 fZEAVz"
  id="legend"
>
  <div
    className="legendstyle__LegendSectionContainer-sc-2p0nok-2 iWpYhi"
  >
    <h3
      className="legendstyle__LegendHeader-sc-2p0nok-1 dpKlJj"
    >
      Nodes
    </h3>
    <div
      className="legendstyle__LegendItem-sc-2p0nok-3 juSFsD"
    >
      <div
        className="legendstyle__LegendItemIcon-sc-2p0nok-4 llofHW"
      >
        <div
          className="legendstyle__SquareIcon-sc-2p0nok-5 gchDRt"
          color="#FAC05E"
        />
      </div>
      <span
        className="legendstyle__LegendItemDescription-sc-2p0nok-9 iIELWJ"
      >
        missing
      </span>
    </div>
    <div
      className="legendstyle__LegendItem-sc-2p0nok-3 juSFsD"
    >
      <div
        className="legendstyle__LegendItemIcon-sc-2p0nok-4 llofHW"
      >
        <div
          className="legendstyle__SquareIcon-sc-2p0nok-5 gEtnnO"
          color="#707070"
        />
      </div>
      <span
        className="legendstyle__LegendItemDescription-sc-2p0nok-9 iIELWJ"
      >
        unprocessed
      </span>
    </div>
    <div
      className="legendstyle__LegendItem-sc-2p0nok-3 juSFsD"
    >
      <div
        className="legendstyle__LegendItemIcon-sc-2p0nok-4 llofHW"
      >
        <div
          className="legendstyle__SquareIcon-sc-2p0nok-5 dTRxXv"
          color="#59CD90"
        />
      </div>
      <span
        className="legendstyle__LegendItemDescription-sc-2p0nok-9 iIELWJ"
      >
        success
      </span>
    </div>
    <div
      className="legendstyle__LegendItem-sc-2p0nok-3 juSFsD"
    >
      <div
        className="legendstyle__LegendItemIcon-sc-2p0nok-4 llofHW"
      >
        <div
          className="legendstyle__SquareIcon-sc-2p0nok-5 dqLDO"
          color="#DE3C4B"
        />
      </div>
      <span
        className="legendstyle__LegendItemDescription-sc-2p0nok-9 iIELWJ"
      >
        error
      </span>
    </div>
    <div
      className="legendstyle__LegendItem-sc-2p0nok-3 juSFsD"
    >
      <div
        className="legendstyle__LegendItemIcon-sc-2p0nok-4 llofHW"
      >
        <div
          className="legendstyle__SquareIcon-sc-2p0nok-5 kLExpo"
          color="#3FA7D6"
        />
      </div>
      <span
        className="legendstyle__LegendItemDescription-sc-2p0nok-9 iIELWJ"
      >
        other
      </span>
    </div>
  </div>
  <div
    className="legendstyle__LegendSectionContainer-sc-2p0nok-2 iWpYhi"
  >
    <h3
      className="legendstyle__LegendHeader-sc-2p0nok-1 dpKlJj"
    >
      Composites
    </h3>
    <div
      className="legendstyle__LegendItem-sc-2p0nok-3 juSFsD"
    >
      <div
        className="legendstyle__LegendItemIcon-sc-2p0nok-4 llofHW"
      >
        <div
          className="legendstyle__CircleIcon-sc-2p0nok-6 flkVtn"
          color="white"
        />
      </div>
      <span
        className="legendstyle__LegendItemDescription-sc-2p0nok-9 iIELWJ"
      >
        startNode
      </span>
    </div>
    <div
      className="legendstyle__LegendItem-sc-2p0nok-3 juSFsD"
    >
      <div
        className="legendstyle__LegendItemIcon-sc-2p0nok-4 llofHW"
      >
        <div
          className="legendstyle__CircleIcon-sc-2p0nok-6 bkFdDJ"
          color="multi"
        />
      </div>
      <span
        className="legendstyle__LegendItemDescription-sc-2p0nok-9 iIELWJ"
      >
        endNode
      </span>
    </div>
  </div>
  <div
    className="legendstyle__LegendSectionContainer-sc-2p0nok-2 iWpYhi"
  >
    <h3
      className="legendstyle__LegendHeader-sc-2p0nok-1 dpKlJj"
    >
      Labels
    </h3>
    <div
      className="legendstyle__LegendItem-sc-2p0nok-3 juSFsD"
    >
      <div
        className="legendstyle__LegendItemIcon-sc-2p0nok-4 llofHW"
      >
        <div
          className="legendstyle__RectangleIcon-sc-2p0nok-7 euDucZ"
          color="#59CD90"
        />
      </div>
      <span
        className="legendstyle__LegendItemDescription-sc-2p0nok-9 iIELWJ"
      >
        _success
      </span>
    </div>
    <div
      className="legendstyle__LegendItem-sc-2p0nok-3 juSFsD"
    >
      <div
        className="legendstyle__LegendItemIcon-sc-2p0nok-4 llofHW"
      >
        <div
          className="legendstyle__RectangleIcon-sc-2p0nok-7 eBmEFs"
          color="#DE3C4B"
        />
      </div>
      <span
        className="legendstyle__LegendItemDescription-sc-2p0nok-9 iIELWJ"
      >
        _error
      </span>
    </div>
    <div
      className="legendstyle__LegendItem-sc-2p0nok-3 juSFsD"
    >
      <div
        className="legendstyle__LegendItemIcon-sc-2p0nok-4 llofHW"
      >
        <div
          className="legendstyle__RectangleIcon-sc-2p0nok-7 cVoNTu"
          color="#3FA7D6"
        />
      </div>
      <span
        className="legendstyle__LegendItemDescription-sc-2p0nok-9 iIELWJ"
      >
        _[custom]
      </span>
    </div>
  </div>
  <div
    className="legendstyle__LegendSectionContainer-sc-2p0nok-2 iWpYhi"
  >
    <h3
      className="legendstyle__LegendHeader-sc-2p0nok-1 dpKlJj"
    >
      Edges
    </h3>
    <div
      className="legendstyle__LegendItem-sc-2p0nok-3 juSFsD"
    >
      <div
        className="legendstyle__LegendItemIcon-sc-2p0nok-4 llofHW"
      >
        <div
          className="legendstyle__LineIcon-sc-2p0nok-8 fKkxXT"
          color="black"
          shape="solid"
        />
      </div>
      <span
        className="legendstyle__LegendItemDescription-sc-2p0nok-9 iIELWJ"
      >
        processed
      </span>
    </div>
    <div
      className="legendstyle__LegendItem-sc-2p0nok-3 juSFsD"
    >
      <div
        className="legendstyle__LegendItemIcon-sc-2p0nok-4 llofHW"
      >
        <div
          className="legendstyle__LineIcon-sc-2p0nok-8 bHlUv"
          color="grey"
          shape="dashed"
        />
      </div>
      <span
        className="legendstyle__LegendItemDescription-sc-2p0nok-9 iIELWJ"
      >
        unprocessed
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Logic Components | MainPanel.Graph.NodeInfo NodeInfo 1`] = `
Array [
  <div
    className="nodeInfostyled__NodeInfoContainer-jone1x-0 hoRVhZ"
    display="true"
    id="execution"
  >
    <div
      className="httpExecutionstyled__HttpExecutionWrapper-sc-1x3eob-0 hJuVdR"
    >
      <div
        className="httpExecutionstyled__LoopBar-sc-1x3eob-4 dprQYV"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          1
        </button>
      </div>
      <div
        className="httpExecutionstyled__ExecutionContainer-sc-1x3eob-1 iKVLMX"
      >
        <div
          className="httpExecutionstyled__RequestContainer-sc-1x3eob-2 jpcqwZ"
        >
          <h2>
            Request
          </h2>
          <div />
        </div>
        <div
          className="httpExecutionstyled__ResponseContainer-sc-1x3eob-3 xByKp"
        >
          <h2>
            Response
          </h2>
          <div />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="nodeInfostyled__NodeInfoContainer-jone1x-0 hmrLkO"
    display="false"
    id="options"
  >
    <div
      className="rawstyled__RawContainer-spwng0-0 fAARLc"
    />
  </div>,
  <div
    className="nodeInfostyled__NodeInfoContainer-jone1x-0 hmrLkO"
    display="false"
    id="raw-container"
  >
    <div
      className="rawstyled__RawContainer-spwng0-0 fAARLc"
    />
  </div>,
  <div
    className="nodeInfostyled__NodeInfoOptionsBar-jone1x-1 bWMUdw"
  >
    <button
      className="nodeInfostyled__NodeInfoOption-jone1x-2 cGSFpH"
      onClick={[Function]}
      type="button"
    >
      EXECUTION
    </button>
    <button
      className="nodeInfostyled__NodeInfoOption-jone1x-2 YkSEd"
      onClick={[Function]}
      type="button"
    >
      OPTIONS
    </button>
    <button
      className="nodeInfostyled__NodeInfoOption-jone1x-2 YkSEd"
      onClick={[Function]}
      type="button"
    >
      RAW
    </button>
  </div>,
]
`;

exports[`Storyshots Logic Components | MainPanel.Graph.NodePerformanceTimeline NodePerformanceTimeline 1`] = `
<div
  className="timelinestyle__Timeline-sc-1d4j339-0 hFKUmK"
  tabIndex="0"
/>
`;

exports[`Storyshots Logic Components | SidePanel SidePanel 1`] = `
<div
  className="sidePanelstyle__SidePanelWrapper-ov50bf-0 eKNNt"
>
  <button
    className="sidePanelstyle__CloseSidePanelButton-ov50bf-4 dUrZsB"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-times fa-w-11 "
      data-icon="times"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 352 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>
  <div
    className="sidePanelstyle__SidePanelContent-ov50bf-5 dGBJDV"
  >
    <div
      className="fragmentListstyle__FragmentListWrapper-k1cyov-0 QBHRV"
    >
      <h1>
        List of fragments
      </h1>
      <div
        className="fragmentListstyle__SortingWrapper-k1cyov-1 chmpju"
      >
        <button
          className="fragmentListstyle__SortingButton-k1cyov-2 fragmentListstyle__StatusSortingButton-k1cyov-3 grLzTR"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-long-arrow-alt-down fa-w-8 "
            data-icon="long-arrow-alt-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 256 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M168 345.941V44c0-6.627-5.373-12-12-12h-56c-6.627 0-12 5.373-12 12v301.941H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.569 9.373 33.941 0l86.059-86.059c15.119-15.119 4.411-40.971-16.971-40.971H168z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
        <button
          className="fragmentListstyle__SortingButton-k1cyov-2 avWAN"
          onClick={[Function]}
        >
          <span
            className="tableHeaderName"
          >
            ID
          </span>
          <span
            className="tableHeaderIcon"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-long-arrow-alt-down fa-w-8 "
              data-icon="long-arrow-alt-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 256 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M168 345.941V44c0-6.627-5.373-12-12-12h-56c-6.627 0-12 5.373-12 12v301.941H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.569 9.373 33.941 0l86.059-86.059c15.119-15.119 4.411-40.971-16.971-40.971H168z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </span>
        </button>
        <button
          className="fragmentListstyle__SortingButton-k1cyov-2 avWAN"
          onClick={[Function]}
        >
          <span
            className="tableHeaderName"
          >
            TYPE
          </span>
          <span
            className="tableHeaderIcon"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-long-arrow-alt-down fa-w-8 "
              data-icon="long-arrow-alt-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 256 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M168 345.941V44c0-6.627-5.373-12-12-12h-56c-6.627 0-12 5.373-12 12v301.941H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.569 9.373 33.941 0l86.059-86.059c15.119-15.119 4.411-40.971-16.971-40.971H168z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </span>
        </button>
        <button
          className="fragmentListstyle__SortingButton-k1cyov-2 avWAN"
          onClick={[Function]}
        >
          <span
            className="tableHeaderName"
          >
            TIME
          </span>
          <span
            className="tableHeaderIcon"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-long-arrow-alt-down fa-w-8 "
              data-icon="long-arrow-alt-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 256 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M168 345.941V44c0-6.627-5.373-12-12-12h-56c-6.627 0-12 5.373-12 12v301.941H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.569 9.373 33.941 0l86.059-86.059c15.119-15.119 4.411-40.971-16.971-40.971H168z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </span>
        </button>
        <button
          className="fragmentListstyle__SortingButton-k1cyov-2 fragmentListstyle__StatusSortingButton-k1cyov-3 fragmentListstyle__EmptySortingCell-k1cyov-4 hbIlYh"
          tabIndex="-1"
        />
      </div>
      <div
        className="fragmentListstyle__ListItemContainer-k1cyov-5 jUpsVY"
      >
        <div
          className="fragmentListItemstyle__FragmentListItemContainer-sc-1leslat-0 beMuhT"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          <div
            className="fragmentListItemstyle__StatusWrapper-sc-1leslat-1 honGAR"
          >
            <div
              className="fragmentListItemstyle__Status-sc-1leslat-3 bhyqIJ"
            />
          </div>
          <div
            className="fragmentListItemstyle__TableItem-sc-1leslat-4 fragmentListItemstyle__TableItemId-sc-1leslat-5 hhvkgD"
          >
            <p
              className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
            >
              <span
                className="tableItemContent"
              >
                E
              </span>
            </p>
            <span
              className="tableItemIcon"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-arrow-down fa-w-14 "
                data-icon="arrow-down"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
          <div
            className="fragmentListItemstyle__TableItem-sc-1leslat-4 ecGrSS"
          >
            <p
              className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
            >
              <span
                className="tableItemContent"
              >
                E
              </span>
            </p>
          </div>
          <div
            className="fragmentListItemstyle__TableItem-sc-1leslat-4 ecGrSS"
          >
            <p
              className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
            >
              <span
                className="tableItemContent"
              >
                5ms
              </span>
            </p>
          </div>
          <div
            className="fragmentListItemstyle__StatusWrapper-sc-1leslat-1 fragmentListItemstyle__ShowGraphButton-sc-1leslat-2 iVNrjR"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-arrow-circle-right fa-w-16 "
              data-icon="arrow-circle-right"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              tabIndex="0"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zm-28.9 143.6l75.5 72.4H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h182.6l-75.5 72.4c-9.7 9.3-9.9 24.8-.4 34.3l11 10.9c9.4 9.4 24.6 9.4 33.9 0L404.3 273c9.4-9.4 9.4-24.6 0-33.9L271.6 106.3c-9.4-9.4-24.6-9.4-33.9 0l-11 10.9c-9.5 9.6-9.3 25.1.4 34.4z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="nodeListstyle__NodeListWrapper-sc-1nrg4l-0 bymORj"
        >
          <button
            className="nodeListstyle__NodeButton-sc-1nrg4l-1 cWgmHT"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            DIV
          </button>
          <button
            className="nodeListstyle__NodeButton-sc-1nrg4l-1 cWgmHT"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            DIV
          </button>
        </div>
        <div
          className="fragmentListItemstyle__FragmentListItemContainer-sc-1leslat-0 beMuhT"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          <div
            className="fragmentListItemstyle__StatusWrapper-sc-1leslat-1 honGAR"
          >
            <div
              className="fragmentListItemstyle__Status-sc-1leslat-3 iAGZOE"
            />
          </div>
          <div
            className="fragmentListItemstyle__TableItem-sc-1leslat-4 fragmentListItemstyle__TableItemId-sc-1leslat-5 hhvkgD"
          >
            <p
              className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
            >
              <span
                className="tableItemContent"
              >
                D
              </span>
            </p>
            <span
              className="tableItemIcon"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-arrow-down fa-w-14 "
                data-icon="arrow-down"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
          <div
            className="fragmentListItemstyle__TableItem-sc-1leslat-4 ecGrSS"
          >
            <p
              className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
            >
              <span
                className="tableItemContent"
              >
                D
              </span>
            </p>
          </div>
          <div
            className="fragmentListItemstyle__TableItem-sc-1leslat-4 ecGrSS"
          >
            <p
              className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
            >
              <span
                className="tableItemContent"
              >
                1ms
              </span>
            </p>
          </div>
          <div
            className="fragmentListItemstyle__StatusWrapper-sc-1leslat-1 fragmentListItemstyle__ShowGraphButton-sc-1leslat-2 iVNrjR"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-arrow-circle-right fa-w-16 "
              data-icon="arrow-circle-right"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              tabIndex="0"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zm-28.9 143.6l75.5 72.4H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h182.6l-75.5 72.4c-9.7 9.3-9.9 24.8-.4 34.3l11 10.9c9.4 9.4 24.6 9.4 33.9 0L404.3 273c9.4-9.4 9.4-24.6 0-33.9L271.6 106.3c-9.4-9.4-24.6-9.4-33.9 0l-11 10.9c-9.5 9.6-9.3 25.1.4 34.4z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="nodeListstyle__NodeListWrapper-sc-1nrg4l-0 bymORj"
        >
          <button
            className="nodeListstyle__NodeButton-sc-1nrg4l-1 cWgmHT"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            DIV
          </button>
          <button
            className="nodeListstyle__NodeButton-sc-1nrg4l-1 cWgmHT"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            DIV
          </button>
        </div>
        <div
          className="fragmentListItemstyle__FragmentListItemContainer-sc-1leslat-0 beMuhT"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          <div
            className="fragmentListItemstyle__StatusWrapper-sc-1leslat-1 honGAR"
          >
            <div
              className="fragmentListItemstyle__Status-sc-1leslat-3 cufWfz"
            />
          </div>
          <div
            className="fragmentListItemstyle__TableItem-sc-1leslat-4 fragmentListItemstyle__TableItemId-sc-1leslat-5 hhvkgD"
          >
            <p
              className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
            >
              <span
                className="tableItemContent"
              >
                C
              </span>
            </p>
            <span
              className="tableItemIcon"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-arrow-down fa-w-14 "
                data-icon="arrow-down"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
          <div
            className="fragmentListItemstyle__TableItem-sc-1leslat-4 ecGrSS"
          >
            <p
              className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
            >
              <span
                className="tableItemContent"
              >
                C
              </span>
            </p>
          </div>
          <div
            className="fragmentListItemstyle__TableItem-sc-1leslat-4 ecGrSS"
          >
            <p
              className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
            >
              <span
                className="tableItemContent"
              >
                3ms
              </span>
            </p>
          </div>
          <div
            className="fragmentListItemstyle__StatusWrapper-sc-1leslat-1 fragmentListItemstyle__ShowGraphButton-sc-1leslat-2 iVNrjR"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-arrow-circle-right fa-w-16 "
              data-icon="arrow-circle-right"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              tabIndex="0"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zm-28.9 143.6l75.5 72.4H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h182.6l-75.5 72.4c-9.7 9.3-9.9 24.8-.4 34.3l11 10.9c9.4 9.4 24.6 9.4 33.9 0L404.3 273c9.4-9.4 9.4-24.6 0-33.9L271.6 106.3c-9.4-9.4-24.6-9.4-33.9 0l-11 10.9c-9.5 9.6-9.3 25.1.4 34.4z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="nodeListstyle__NodeListWrapper-sc-1nrg4l-0 bymORj"
        >
          <button
            className="nodeListstyle__NodeButton-sc-1nrg4l-1 cWgmHT"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            DIV
          </button>
          <button
            className="nodeListstyle__NodeButton-sc-1nrg4l-1 cWgmHT"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            DIV
          </button>
        </div>
        <div
          className="fragmentListItemstyle__FragmentListItemContainer-sc-1leslat-0 beMuhT"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          <div
            className="fragmentListItemstyle__StatusWrapper-sc-1leslat-1 honGAR"
          >
            <div
              className="fragmentListItemstyle__Status-sc-1leslat-3 cIWurx"
            />
          </div>
          <div
            className="fragmentListItemstyle__TableItem-sc-1leslat-4 fragmentListItemstyle__TableItemId-sc-1leslat-5 hhvkgD"
          >
            <p
              className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
            >
              <span
                className="tableItemContent"
              >
                B
              </span>
            </p>
            <span
              className="tableItemIcon"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-arrow-down fa-w-14 "
                data-icon="arrow-down"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
          <div
            className="fragmentListItemstyle__TableItem-sc-1leslat-4 ecGrSS"
          >
            <p
              className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
            >
              <span
                className="tableItemContent"
              >
                B
              </span>
            </p>
          </div>
          <div
            className="fragmentListItemstyle__TableItem-sc-1leslat-4 ecGrSS"
          >
            <p
              className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
            >
              <span
                className="tableItemContent"
              >
                2ms
              </span>
            </p>
          </div>
          <div
            className="fragmentListItemstyle__StatusWrapper-sc-1leslat-1 fragmentListItemstyle__ShowGraphButton-sc-1leslat-2 iVNrjR"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-arrow-circle-right fa-w-16 "
              data-icon="arrow-circle-right"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              tabIndex="0"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zm-28.9 143.6l75.5 72.4H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h182.6l-75.5 72.4c-9.7 9.3-9.9 24.8-.4 34.3l11 10.9c9.4 9.4 24.6 9.4 33.9 0L404.3 273c9.4-9.4 9.4-24.6 0-33.9L271.6 106.3c-9.4-9.4-24.6-9.4-33.9 0l-11 10.9c-9.5 9.6-9.3 25.1.4 34.4z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="nodeListstyle__NodeListWrapper-sc-1nrg4l-0 bymORj"
        >
          <button
            className="nodeListstyle__NodeButton-sc-1nrg4l-1 cWgmHT"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            DIV
          </button>
          <button
            className="nodeListstyle__NodeButton-sc-1nrg4l-1 cWgmHT"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            DIV
          </button>
        </div>
        <div
          className="fragmentListItemstyle__FragmentListItemContainer-sc-1leslat-0 beMuhT"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex="0"
        >
          <div
            className="fragmentListItemstyle__StatusWrapper-sc-1leslat-1 honGAR"
          >
            <div
              className="fragmentListItemstyle__Status-sc-1leslat-3 cKTGXu"
            />
          </div>
          <div
            className="fragmentListItemstyle__TableItem-sc-1leslat-4 fragmentListItemstyle__TableItemId-sc-1leslat-5 hhvkgD"
          >
            <p
              className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
            >
              <span
                className="tableItemContent"
              >
                A
              </span>
            </p>
            <span
              className="tableItemIcon"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-arrow-down fa-w-14 "
                data-icon="arrow-down"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
          <div
            className="fragmentListItemstyle__TableItem-sc-1leslat-4 ecGrSS"
          >
            <p
              className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
            >
              <span
                className="tableItemContent"
              >
                A
              </span>
            </p>
          </div>
          <div
            className="fragmentListItemstyle__TableItem-sc-1leslat-4 ecGrSS"
          >
            <p
              className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
            >
              <span
                className="tableItemContent"
              >
                4ms
              </span>
            </p>
          </div>
          <div
            className="fragmentListItemstyle__StatusWrapper-sc-1leslat-1 fragmentListItemstyle__ShowGraphButton-sc-1leslat-2 iVNrjR"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-arrow-circle-right fa-w-16 "
              data-icon="arrow-circle-right"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              tabIndex="0"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zm-28.9 143.6l75.5 72.4H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h182.6l-75.5 72.4c-9.7 9.3-9.9 24.8-.4 34.3l11 10.9c9.4 9.4 24.6 9.4 33.9 0L404.3 273c9.4-9.4 9.4-24.6 0-33.9L271.6 106.3c-9.4-9.4-24.6-9.4-33.9 0l-11 10.9c-9.5 9.6-9.3 25.1.4 34.4z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
        <div
          className="nodeListstyle__NodeListWrapper-sc-1nrg4l-0 bymORj"
        >
          <button
            className="nodeListstyle__NodeButton-sc-1nrg4l-1 cWgmHT"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            DIV
          </button>
          <button
            className="nodeListstyle__NodeButton-sc-1nrg4l-1 cWgmHT"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            DIV
          </button>
        </div>
      </div>
    </div>
    <div
      className="fragmentGanttstyle__GanntContainer-doud4f-0 jpEcLx fragmentGanntContainer"
    >
      <div
        className="fragmentGanttstyle__TimelineBar-doud4f-1 fbUhVb"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        <span>
          Fragments performance
        </span>
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-chevron-down fa-w-14 "
          data-icon="chevron-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <div
        className="fragmentGanttstyle__Timeline-doud4f-2 jEPkyk timeline"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Logic Components | SidePanel.FragmentGantt FragmentGantt 1`] = `
<div
  className="fragmentGanttstyle__GanntContainer-doud4f-0 jpEcLx fragmentGanntContainer"
>
  <div
    className="fragmentGanttstyle__TimelineBar-doud4f-1 fbUhVb"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0"
  >
    <span>
      Fragments performance
    </span>
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-chevron-down fa-w-14 "
      data-icon="chevron-down"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
  <div
    className="fragmentGanttstyle__Timeline-doud4f-2 jEPkyk timeline"
  />
</div>
`;

exports[`Storyshots Logic Components | SidePanel.FragmentList FragmentList 1`] = `
<div
  className="fragmentListstyle__FragmentListWrapper-k1cyov-0 QBHRV"
>
  <h1>
    List of fragments
  </h1>
  <div
    className="fragmentListstyle__SortingWrapper-k1cyov-1 chmpju"
  >
    <button
      className="fragmentListstyle__SortingButton-k1cyov-2 fragmentListstyle__StatusSortingButton-k1cyov-3 grLzTR"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-long-arrow-alt-down fa-w-8 "
        data-icon="long-arrow-alt-down"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 256 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M168 345.941V44c0-6.627-5.373-12-12-12h-56c-6.627 0-12 5.373-12 12v301.941H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.569 9.373 33.941 0l86.059-86.059c15.119-15.119 4.411-40.971-16.971-40.971H168z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </button>
    <button
      className="fragmentListstyle__SortingButton-k1cyov-2 avWAN"
      onClick={[Function]}
    >
      <span
        className="tableHeaderName"
      >
        ID
      </span>
      <span
        className="tableHeaderIcon"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-long-arrow-alt-down fa-w-8 "
          data-icon="long-arrow-alt-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 256 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M168 345.941V44c0-6.627-5.373-12-12-12h-56c-6.627 0-12 5.373-12 12v301.941H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.569 9.373 33.941 0l86.059-86.059c15.119-15.119 4.411-40.971-16.971-40.971H168z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
    </button>
    <button
      className="fragmentListstyle__SortingButton-k1cyov-2 avWAN"
      onClick={[Function]}
    >
      <span
        className="tableHeaderName"
      >
        TYPE
      </span>
      <span
        className="tableHeaderIcon"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-long-arrow-alt-down fa-w-8 "
          data-icon="long-arrow-alt-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 256 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M168 345.941V44c0-6.627-5.373-12-12-12h-56c-6.627 0-12 5.373-12 12v301.941H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.569 9.373 33.941 0l86.059-86.059c15.119-15.119 4.411-40.971-16.971-40.971H168z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
    </button>
    <button
      className="fragmentListstyle__SortingButton-k1cyov-2 avWAN"
      onClick={[Function]}
    >
      <span
        className="tableHeaderName"
      >
        TIME
      </span>
      <span
        className="tableHeaderIcon"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-long-arrow-alt-down fa-w-8 "
          data-icon="long-arrow-alt-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 256 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M168 345.941V44c0-6.627-5.373-12-12-12h-56c-6.627 0-12 5.373-12 12v301.941H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.569 9.373 33.941 0l86.059-86.059c15.119-15.119 4.411-40.971-16.971-40.971H168z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
    </button>
    <button
      className="fragmentListstyle__SortingButton-k1cyov-2 fragmentListstyle__StatusSortingButton-k1cyov-3 fragmentListstyle__EmptySortingCell-k1cyov-4 hbIlYh"
      tabIndex="-1"
    />
  </div>
  <div
    className="fragmentListstyle__ListItemContainer-k1cyov-5 jUpsVY"
  >
    <div
      className="fragmentListItemstyle__FragmentListItemContainer-sc-1leslat-0 beMuhT"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    >
      <div
        className="fragmentListItemstyle__StatusWrapper-sc-1leslat-1 honGAR"
      >
        <div
          className="fragmentListItemstyle__Status-sc-1leslat-3 bhyqIJ"
        />
      </div>
      <div
        className="fragmentListItemstyle__TableItem-sc-1leslat-4 fragmentListItemstyle__TableItemId-sc-1leslat-5 hhvkgD"
      >
        <p
          className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
        >
          <span
            className="tableItemContent"
          >
            E
          </span>
        </p>
        <span
          className="tableItemIcon"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex="0"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-arrow-down fa-w-14 "
            data-icon="arrow-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </div>
      <div
        className="fragmentListItemstyle__TableItem-sc-1leslat-4 ecGrSS"
      >
        <p
          className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
        >
          <span
            className="tableItemContent"
          >
            E
          </span>
        </p>
      </div>
      <div
        className="fragmentListItemstyle__TableItem-sc-1leslat-4 ecGrSS"
      >
        <p
          className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
        >
          <span
            className="tableItemContent"
          >
            5ms
          </span>
        </p>
      </div>
      <div
        className="fragmentListItemstyle__StatusWrapper-sc-1leslat-1 fragmentListItemstyle__ShowGraphButton-sc-1leslat-2 iVNrjR"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-arrow-circle-right fa-w-16 "
          data-icon="arrow-circle-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          tabIndex="0"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zm-28.9 143.6l75.5 72.4H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h182.6l-75.5 72.4c-9.7 9.3-9.9 24.8-.4 34.3l11 10.9c9.4 9.4 24.6 9.4 33.9 0L404.3 273c9.4-9.4 9.4-24.6 0-33.9L271.6 106.3c-9.4-9.4-24.6-9.4-33.9 0l-11 10.9c-9.5 9.6-9.3 25.1.4 34.4z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
    <div
      className="nodeListstyle__NodeListWrapper-sc-1nrg4l-0 bymORj"
    >
      <button
        className="nodeListstyle__NodeButton-sc-1nrg4l-1 cWgmHT"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        DIV
      </button>
      <button
        className="nodeListstyle__NodeButton-sc-1nrg4l-1 cWgmHT"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        DIV
      </button>
    </div>
    <div
      className="fragmentListItemstyle__FragmentListItemContainer-sc-1leslat-0 beMuhT"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    >
      <div
        className="fragmentListItemstyle__StatusWrapper-sc-1leslat-1 honGAR"
      >
        <div
          className="fragmentListItemstyle__Status-sc-1leslat-3 iAGZOE"
        />
      </div>
      <div
        className="fragmentListItemstyle__TableItem-sc-1leslat-4 fragmentListItemstyle__TableItemId-sc-1leslat-5 hhvkgD"
      >
        <p
          className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
        >
          <span
            className="tableItemContent"
          >
            D
          </span>
        </p>
        <span
          className="tableItemIcon"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex="0"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-arrow-down fa-w-14 "
            data-icon="arrow-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </div>
      <div
        className="fragmentListItemstyle__TableItem-sc-1leslat-4 ecGrSS"
      >
        <p
          className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
        >
          <span
            className="tableItemContent"
          >
            D
          </span>
        </p>
      </div>
      <div
        className="fragmentListItemstyle__TableItem-sc-1leslat-4 ecGrSS"
      >
        <p
          className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
        >
          <span
            className="tableItemContent"
          >
            1ms
          </span>
        </p>
      </div>
      <div
        className="fragmentListItemstyle__StatusWrapper-sc-1leslat-1 fragmentListItemstyle__ShowGraphButton-sc-1leslat-2 iVNrjR"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-arrow-circle-right fa-w-16 "
          data-icon="arrow-circle-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          tabIndex="0"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zm-28.9 143.6l75.5 72.4H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h182.6l-75.5 72.4c-9.7 9.3-9.9 24.8-.4 34.3l11 10.9c9.4 9.4 24.6 9.4 33.9 0L404.3 273c9.4-9.4 9.4-24.6 0-33.9L271.6 106.3c-9.4-9.4-24.6-9.4-33.9 0l-11 10.9c-9.5 9.6-9.3 25.1.4 34.4z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
    <div
      className="nodeListstyle__NodeListWrapper-sc-1nrg4l-0 bymORj"
    >
      <button
        className="nodeListstyle__NodeButton-sc-1nrg4l-1 cWgmHT"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        DIV
      </button>
      <button
        className="nodeListstyle__NodeButton-sc-1nrg4l-1 cWgmHT"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        DIV
      </button>
    </div>
    <div
      className="fragmentListItemstyle__FragmentListItemContainer-sc-1leslat-0 beMuhT"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    >
      <div
        className="fragmentListItemstyle__StatusWrapper-sc-1leslat-1 honGAR"
      >
        <div
          className="fragmentListItemstyle__Status-sc-1leslat-3 cufWfz"
        />
      </div>
      <div
        className="fragmentListItemstyle__TableItem-sc-1leslat-4 fragmentListItemstyle__TableItemId-sc-1leslat-5 hhvkgD"
      >
        <p
          className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
        >
          <span
            className="tableItemContent"
          >
            C
          </span>
        </p>
        <span
          className="tableItemIcon"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex="0"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-arrow-down fa-w-14 "
            data-icon="arrow-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </div>
      <div
        className="fragmentListItemstyle__TableItem-sc-1leslat-4 ecGrSS"
      >
        <p
          className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
        >
          <span
            className="tableItemContent"
          >
            C
          </span>
        </p>
      </div>
      <div
        className="fragmentListItemstyle__TableItem-sc-1leslat-4 ecGrSS"
      >
        <p
          className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
        >
          <span
            className="tableItemContent"
          >
            3ms
          </span>
        </p>
      </div>
      <div
        className="fragmentListItemstyle__StatusWrapper-sc-1leslat-1 fragmentListItemstyle__ShowGraphButton-sc-1leslat-2 iVNrjR"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-arrow-circle-right fa-w-16 "
          data-icon="arrow-circle-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          tabIndex="0"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zm-28.9 143.6l75.5 72.4H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h182.6l-75.5 72.4c-9.7 9.3-9.9 24.8-.4 34.3l11 10.9c9.4 9.4 24.6 9.4 33.9 0L404.3 273c9.4-9.4 9.4-24.6 0-33.9L271.6 106.3c-9.4-9.4-24.6-9.4-33.9 0l-11 10.9c-9.5 9.6-9.3 25.1.4 34.4z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
    <div
      className="nodeListstyle__NodeListWrapper-sc-1nrg4l-0 bymORj"
    >
      <button
        className="nodeListstyle__NodeButton-sc-1nrg4l-1 cWgmHT"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        DIV
      </button>
      <button
        className="nodeListstyle__NodeButton-sc-1nrg4l-1 cWgmHT"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        DIV
      </button>
    </div>
    <div
      className="fragmentListItemstyle__FragmentListItemContainer-sc-1leslat-0 beMuhT"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    >
      <div
        className="fragmentListItemstyle__StatusWrapper-sc-1leslat-1 honGAR"
      >
        <div
          className="fragmentListItemstyle__Status-sc-1leslat-3 cIWurx"
        />
      </div>
      <div
        className="fragmentListItemstyle__TableItem-sc-1leslat-4 fragmentListItemstyle__TableItemId-sc-1leslat-5 hhvkgD"
      >
        <p
          className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
        >
          <span
            className="tableItemContent"
          >
            B
          </span>
        </p>
        <span
          className="tableItemIcon"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex="0"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-arrow-down fa-w-14 "
            data-icon="arrow-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </div>
      <div
        className="fragmentListItemstyle__TableItem-sc-1leslat-4 ecGrSS"
      >
        <p
          className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
        >
          <span
            className="tableItemContent"
          >
            B
          </span>
        </p>
      </div>
      <div
        className="fragmentListItemstyle__TableItem-sc-1leslat-4 ecGrSS"
      >
        <p
          className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
        >
          <span
            className="tableItemContent"
          >
            2ms
          </span>
        </p>
      </div>
      <div
        className="fragmentListItemstyle__StatusWrapper-sc-1leslat-1 fragmentListItemstyle__ShowGraphButton-sc-1leslat-2 iVNrjR"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-arrow-circle-right fa-w-16 "
          data-icon="arrow-circle-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          tabIndex="0"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zm-28.9 143.6l75.5 72.4H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h182.6l-75.5 72.4c-9.7 9.3-9.9 24.8-.4 34.3l11 10.9c9.4 9.4 24.6 9.4 33.9 0L404.3 273c9.4-9.4 9.4-24.6 0-33.9L271.6 106.3c-9.4-9.4-24.6-9.4-33.9 0l-11 10.9c-9.5 9.6-9.3 25.1.4 34.4z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
    <div
      className="nodeListstyle__NodeListWrapper-sc-1nrg4l-0 bymORj"
    >
      <button
        className="nodeListstyle__NodeButton-sc-1nrg4l-1 cWgmHT"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        DIV
      </button>
      <button
        className="nodeListstyle__NodeButton-sc-1nrg4l-1 cWgmHT"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        DIV
      </button>
    </div>
    <div
      className="fragmentListItemstyle__FragmentListItemContainer-sc-1leslat-0 beMuhT"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="0"
    >
      <div
        className="fragmentListItemstyle__StatusWrapper-sc-1leslat-1 honGAR"
      >
        <div
          className="fragmentListItemstyle__Status-sc-1leslat-3 cKTGXu"
        />
      </div>
      <div
        className="fragmentListItemstyle__TableItem-sc-1leslat-4 fragmentListItemstyle__TableItemId-sc-1leslat-5 hhvkgD"
      >
        <p
          className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
        >
          <span
            className="tableItemContent"
          >
            A
          </span>
        </p>
        <span
          className="tableItemIcon"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex="0"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-arrow-down fa-w-14 "
            data-icon="arrow-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </div>
      <div
        className="fragmentListItemstyle__TableItem-sc-1leslat-4 ecGrSS"
      >
        <p
          className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
        >
          <span
            className="tableItemContent"
          >
            A
          </span>
        </p>
      </div>
      <div
        className="fragmentListItemstyle__TableItem-sc-1leslat-4 ecGrSS"
      >
        <p
          className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
        >
          <span
            className="tableItemContent"
          >
            4ms
          </span>
        </p>
      </div>
      <div
        className="fragmentListItemstyle__StatusWrapper-sc-1leslat-1 fragmentListItemstyle__ShowGraphButton-sc-1leslat-2 iVNrjR"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-arrow-circle-right fa-w-16 "
          data-icon="arrow-circle-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          tabIndex="0"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zm-28.9 143.6l75.5 72.4H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h182.6l-75.5 72.4c-9.7 9.3-9.9 24.8-.4 34.3l11 10.9c9.4 9.4 24.6 9.4 33.9 0L404.3 273c9.4-9.4 9.4-24.6 0-33.9L271.6 106.3c-9.4-9.4-24.6-9.4-33.9 0l-11 10.9c-9.5 9.6-9.3 25.1.4 34.4z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
    <div
      className="nodeListstyle__NodeListWrapper-sc-1nrg4l-0 bymORj"
    >
      <button
        className="nodeListstyle__NodeButton-sc-1nrg4l-1 cWgmHT"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        DIV
      </button>
      <button
        className="nodeListstyle__NodeButton-sc-1nrg4l-1 cWgmHT"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        DIV
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Logic Components | SidePanel.FragmentList.FragmentListItem FragmentListItem 1`] = `
Array [
  <div
    className="fragmentListItemstyle__FragmentListItemContainer-sc-1leslat-0 beMuhT"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0"
  >
    <div
      className="fragmentListItemstyle__StatusWrapper-sc-1leslat-1 honGAR"
    >
      <div
        className="fragmentListItemstyle__Status-sc-1leslat-3 iAGZOE"
      />
    </div>
    <div
      className="fragmentListItemstyle__TableItem-sc-1leslat-4 fragmentListItemstyle__TableItemId-sc-1leslat-5 hhvkgD"
    >
      <p
        className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
      >
        <span
          className="tableItemContent"
        >
          1
        </span>
      </p>
      <span
        className="tableItemIcon"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-arrow-down fa-w-14 "
          data-icon="arrow-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </span>
    </div>
    <div
      className="fragmentListItemstyle__TableItem-sc-1leslat-4 ecGrSS"
    >
      <p
        className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
      >
        <span
          className="tableItemContent"
        >
          snippet
        </span>
      </p>
    </div>
    <div
      className="fragmentListItemstyle__TableItem-sc-1leslat-4 ecGrSS"
    >
      <p
        className="fragmentListItemstyle__OverflowWrapper-sc-1leslat-6 cgCppH"
      >
        <span
          className="tableItemContent"
        >
          100ms
        </span>
      </p>
    </div>
    <div
      className="fragmentListItemstyle__StatusWrapper-sc-1leslat-1 fragmentListItemstyle__ShowGraphButton-sc-1leslat-2 iVNrjR"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-arrow-circle-right fa-w-16 "
        data-icon="arrow-circle-right"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        tabIndex="0"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zm-28.9 143.6l75.5 72.4H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h182.6l-75.5 72.4c-9.7 9.3-9.9 24.8-.4 34.3l11 10.9c9.4 9.4 24.6 9.4 33.9 0L404.3 273c9.4-9.4 9.4-24.6 0-33.9L271.6 106.3c-9.4-9.4-24.6-9.4-33.9 0l-11 10.9c-9.5 9.6-9.3 25.1.4 34.4z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
  </div>,
  <div
    className="nodeListstyle__NodeListWrapper-sc-1nrg4l-0 bymORj"
  >
    <button
      className="nodeListstyle__NodeButton-sc-1nrg4l-1 cWgmHT"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      DIV
    </button>
  </div>,
]
`;
